feat(creditsEditor): copy/paste preserve §-format